# contrib_local-cleaner

./: CMakeLists.txt
resources/: cleaner.manifest  cleaner.rc
src/: cleaner.cpp
